# boost-asio-dnssd

./: CMakeLists.txt  README.md
include/boost/asio/ip/dnssd/: browser.hpp  browser_service.hpp  record_set.hpp  registration.hpp  registration_service.hpp  stub.hpp  unique_ptr.hpp
include/boost/asio/ip/dnssd/impl/: avahi_poll.hpp
test/: CMakeLists.txt  basic.cpp  record_set.cpp
